data/derived/comb/progs/unify/prog1937.ml.out
Characters 136-137:
  if (y = 2) then y;;
                  ^
Error: This expression has type int but an expression was expected of type
         unit
